change wrapping of icon link buttons to fix firefox bug

--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -7,7 +7,7 @@ $panels-height: 85vh;
 .icon-link {
   text-decoration: none;
   font-size: 0;
-  margin: 0;
+  margin: auto 0;
   padding: 0;
   color: unset;
 }
